Reduce redis configurations to sentinel mode